--- a/index-swiper.html
+++ b/index-swiper.html
@@ -146,8 +146,7 @@
                 <li>
                     <a href="#">
                         <span class="fa fa-suitcase"></span>
-                        <p>新手大礼包a</p>
-                        <p>222</p>
+                        <p>新手大礼包</p>
                     </a>
                 </li>
             </ul>
