--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <li>
                     <a href="#">
                         <span class="fa fa-suitcase"></span>
-                        <p>新手大礼包</p>
+                        <p>新手大礼包asdfsdf</p>
                     </a>
                 </li>
             </ul>
